--- a/src/main/resources/templates/article_update.html
+++ b/src/main/resources/templates/article_update.html
@@ -19,7 +19,6 @@
                     <img th:src="@{${imageUrl}}" width="475px" height="240px">
                     <button class="size_full btn btn-primary" onclick="deleteImage(this)">삭제하기</button>
                 </div>
-
                 <!-- 이미지 첨부 -->
                 <div class="form-floating mb-3">
                     <!-- 이미지 첨부 창 -->
@@ -27,12 +26,13 @@
                     <label for="files">이미지 업로드</label>
                 </div>
             </div>
+            <!-- 태그 -->
             <div class="tag-container">
                 <ul id="tag-list">
                 </ul>
                 <input type="text" id="tag-input" placeholder="설정할 태그를 입력해주세요">
             </div>
-            <!-- 수정하기 버튼 -->
+            <!-- 수정하기 버튼 div -->
             <div class="button_flex">
                 <!-- 수정하기 버튼 -->
                 <button type="button" onclick="updateSubmit()" class="button_blue size_full btn btn-primary">수정하기</button>
@@ -44,17 +44,19 @@
         const token = $("meta[name='_csrf']").attr("content")
         const header = $("meta[name='_csrf_header']").attr("content");
         tags.forEach(tag => setTag(tag));
-
         function setTag(tag) {
-            const $tagInput = $('#tag-input');
-            const $tagList = $('#tag-list');
-            const maxTags = 10;
+              // 태그 입력창
+              const $tagInput = $('#tag-input');
+              const $tagList = $('#tag-list');
+              // 태그 최대 허용 개수
+              const maxTags = 10;
 
               if (tag.trim() === '') return;
 
               const $tagItem = $('<li>',{class:'tag-item'});
+              // 태그 내용
               const $tagText = $('<span>',{ class:'tag-text', text: `#${tag.trim()}`});
-
+              // 태그 삭제 버튼
               const $removeTag = $('<span>',{ class:'remove-tag',
                                               text:'x',
                                               click : function() {
@@ -65,12 +67,13 @@
 
               $tagItem.append($tagText,$removeTag);
               $tagList.append($tagItem);
-              setTagInputVisibility();
 
+              setTagInputVisibility();
+              // 태그 개수 초과시 입력 창 block
               function setTagInputVisibility() {
-              $tagInput.css('display', $tagList.children('li').length < maxTags ? 'block' : 'none');
+                  $tagInput.css('display', $tagList.children('li').length < maxTags ? 'block' : 'none');
             }
-      }
+        }
 
 
         $(document).ready(function() {
@@ -79,15 +82,19 @@
                const $tagList = $("#tag-list");
                const maxTags = 10;
 
+               // 태그 입력하고 엔터 누를 시
                $tagInput.keypress(function(event) {
                  if (event.key === 'Enter') {
                    let duplicate = 0;
                    event.preventDefault();
+                   // 태그 입력 내용
                    const tagValue = $tagInput.val().trim();
+                   // 태그 수
                    const tagCount = $tagList.children('li').length;
                    if (tagCount < maxTags) {
                          const $existingTags = $tagList.find('.tag-text');
                          $existingTags.each(function() {
+                             // 태그 중복 확인
                              if($(this).text() === "#" + tagValue){
                                 alert('같은 이름을 가진 태그가 존재합니다.');
                                 duplicate = 1;
@@ -96,6 +103,7 @@
                              }
                          });
                          if(duplicate == 0){
+                           // 태그 추가
                            addTag(tagValue);
                            $tagInput.val('');
                          }
@@ -107,53 +115,59 @@
                  }
                });
 
+               // 태그 추가
                function addTag(tag) {
-                 if (tag.trim() === '') return;
-                 const sanitizedValue = tag.replace(/[^a-zA-Z0-9가-힣ㄱ-ㅎㅏ-ㅣ]/g, '');
-                 if(sanitizedValue != tag) {
-                     alert('특수문자는 허용 되지 않습니다.');
-                     return;
-                 }
+                     if (tag.trim() === '') return;
+                     // 특수문자 금지
+                     const sanitizedValue = tag.replace(/[^a-zA-Z0-9가-힣ㄱ-ㅎㅏ-ㅣ]/g, '');
+                     if(sanitizedValue != tag) {
+                         alert('특수문자는 허용 되지 않습니다.');
+                         return;
+                     }
 
-                 const $tagItem = $('<li>',{ class : 'tag-item'});
-                 const $tagText = $('<span>',{ class: 'tag-text', text: `#${sanitizedValue.trim()}`});
-                 const $removeTag = $('<span>',
-                    { class:'remove-tag',
-                      text:'x',
-                      click: function() {
-                         $(this).closest('.tag-item').remove();
-                         updateTagInputVisibility();
-                      }
-                    });
+                     const $tagItem = $('<li>',{ class : 'tag-item'});
+                     const $tagText = $('<span>',{ class: 'tag-text', text: `#${sanitizedValue.trim()}`});
+                     const $removeTag = $('<span>',
+                        { class:'remove-tag',
+                          text:'x',
+                          click: function() {
+                             $(this).closest('.tag-item').remove();
+                             updateTagInputVisibility();
+                          }
+                        });
 
-                 $tagItem.append($tagText,$removeTag);
-                 $tagList.append($tagItem);
-                 updateTagInputVisibility();
+                     $tagItem.append($tagText,$removeTag);
+                     $tagList.append($tagItem);
+                     updateTagInputVisibility();
                }
-
+               // 태그 개수 초과시 입력창 block
                function updateTagInputVisibility() {
-                $tagInput.css('display',$tagList.children('li').length < maxTags ? 'block' : 'none');
+                    $tagInput.css('display',$tagList.children('li').length < maxTags ? 'block' : 'none');
                }
       });
 
       var obj = {};
       var imageUrls = [[${article.imageUrls}]];
 
+      // 이미지 삭제
       function deleteImage(button) {
           var imageUrl = button.previousElementSibling.getAttribute('src');
           imageUrls = imageUrls.filter(function(item) {
-          return item !== imageUrl;
+              return item !== imageUrl;
           });
           obj.imageUrls = imageUrls;
           var parentDiv = button.parentNode;
-          parentDiv.remove(); // 부모 요소 삭제
+          // 부모 요소 삭제
+          parentDiv.remove();
       }
 
 
-     // 수정하기
+     // 글 수정
      function updateSubmit() {
         const $tagList = $('#tag-list');
         const tags = [];
+
+        // 태그 # 제거
         $tagList.find('li').each(function() {
             const spanText = $(this).find('.tag-text').text();
             const cleanedText = spanText.replace(/#/g, '');
@@ -166,13 +180,16 @@
          obj.tags = tags;
 
          var formData = new FormData();
-         var fileInput = $('#files')[0]; // 파일 입력 필드 가져오기
-         var files = fileInput.files; // 선택된 파일들 가져오기
+         // 파일 입력 필드 가져오기
+         var fileInput = $('#files')[0];
+         // 선택된 파일들 가져오기
+         var files = fileInput.files;
          if(obj.imageUrls == undefined)
          {
                   obj.imageUrls = imageUrls;
          }
-         // 첨부파일이 2개 이상일 시
+
+         // 첨부파일 + 현재 이미지 개수가 2개 초과할 시
          if (files.length + obj.imageUrls.length > 2) {
              alert("이미지는 최대 2개까지 첨부할 수 있습니다.");
              fileInput.value = "";
@@ -183,27 +200,26 @@
                  formData.append('value', files[i]);
              }
              formData.append('key', new Blob([JSON.stringify(obj)], { type: "application/json" }));
-
+             // 글 수정
              $.ajax({
              　　type:'put'
-             　   , processData: false // FormData를 사용하면 processData를 false로 설정해야 함
-                  , contentType: false // 파일 업로드 시에는 contentType을 false로 설정해야 함
+             　   , processData: false
+                  , contentType: false
               　 　, data: formData
              　  　, url: '/api/articles'
              　  　, success: function(data) {
-                     if(data.message == "제목과 내용을 수정해주세요")
-                     {
-                         alert(data.message);
-                     }
-                     else {
-                         location.href='/articles/' + obj.id;
-                     }
-             　 　}
+                         if(data.message == "제목과 내용을 수정해주세요")
+                         {
+                             alert(data.message);
+                         }
+                         else {
+                             location.href='/articles/' + obj.id;
+                         }
+             　  　}
                   , beforeSend : function(xhr) {
                                       xhr.setRequestHeader(header, token);
                   }
                   , error:function(e) {
-
                      // 제목 에러 메시지 설정
                      var jsonResponse = JSON.parse(e.responseText);
                      if (jsonResponse.hasOwnProperty('title')) {
