--- a/src/main/resources/templates/article_write.html
+++ b/src/main/resources/templates/article_write.html
@@ -17,35 +17,37 @@
                 <input type="file" name="files" class="form-control" id="files" multiple>
                 <label for="files">이미지 업로드</label>
             </div>
-        <div class="tag-container">
-            <ul id="tag-list"></ul>
-            <input type="text" id="tag-input" placeholder="설정할 태그를 입력해주세요">
-        </div>
-        <!-- 수정하기 버튼 -->
-        <div class="button_flex">
-            <!-- 수정하기 버튼 -->
-            <button onclick="submit()" class="button_blue size_full">작성하기</button>
-        </div>
+            <!-- 태그 -->
+            <div class="tag-container">
+                <ul id="tag-list"></ul>
+                <input type="text" id="tag-input" placeholder="설정할 태그를 입력해주세요">
+            </div>
+            <!-- 수정하기 버튼 div -->
+            <div class="button_flex">
+                <!-- 수정하기 버튼 -->
+                <button onclick="submit()" class="button_blue size_full">작성하기</button>
+            </div>
     </div>
   <script th:inline="javascript">
       const token = $("meta[name='_csrf']").attr("content")
       const header = $("meta[name='_csrf_header']").attr("content");
       $(document).ready(function() {
-
-
              const $tagInput = $("#tag-input");
              const $tagList = $("#tag-list");
              const maxTags = 10;
-
+             // 태그 입력하고 엔터 누를 시
              $tagInput.keypress(function(event) {
                if (event.key === 'Enter') {
                  let duplicate = 0;
                  event.preventDefault();
+                 // 태그 입력 내용
                  const tagValue = $tagInput.val().trim();
+                 // 태그 수
                  const tagCount = $tagList.children('li').length;
                  if (tagCount < maxTags) {
                        const $existingTags = $tagList.find('.tag-text');
                        $existingTags.each(function() {
+                           // 태그 중복 확인
                            if($(this).text() === "#" + tagValue){
                               alert('같은 이름을 가진 태그가 존재합니다.');
                               duplicate = 1;
@@ -54,6 +56,7 @@
                            }
                        });
                        if(duplicate == 0){
+                         // 태그 추가
                          addTag(tagValue);
                          $tagInput.val('');
                        }
@@ -64,9 +67,10 @@
                  }
                }
              });
-
+             // 태그 추가
              function addTag(tag) {
                if (tag.trim() === '') return;
+               // 특수문자 금지
                const sanitizedValue = tag.replace(/[^a-zA-Z0-9가-힣ㄱ-ㅎㅏ-ㅣ]/g, '');
                if(sanitizedValue != tag) {
                    alert('특수문자는 허용 되지 않습니다.');
@@ -88,72 +92,72 @@
                $tagList.append($tagItem);
                updateTagInputVisibility();
              }
-
+             // 태그 개수 초과시 입력창 block
              function updateTagInputVisibility() {
               $tagInput.css('display',$tagList.children('li').length < maxTags ? 'block' : 'none');
              }
-    });
+      });
 
-    function submit() {
-      const $tagList = $('#tag-list');
-      const tags = [];
+      function submit() {
+          const $tagList = $('#tag-list');
+          const tags = [];
+          // 태그 # 제거
+          $tagList.find('li').each(function() {
+              const $spanText = $(this).find('.tag-text').text();
+              const $cleanedText = $spanText.replace(/#/g, '');
+              tags.push($cleanedText);
+          })
+          var obj = {};
+          obj.title = $("#title").val();
+          obj.content = $("#content").val();
+          obj.tags = tags;
 
-      $tagList.find('li').each(function() {
-          const $spanText = $(this).find('.tag-text').text();
-          const $cleanedText = $spanText.replace(/#/g, '');
-          tags.push($cleanedText);
-      })
-      var obj = {};
-       obj.title = $("#title").val();
-       obj.content = $("#content").val();
-       obj.tags = tags;
-
-       var formData = new FormData();
-      var fileInput = $('#files')[0]; // 파일 입력 필드 가져오기
-      var files = fileInput.files; // 선택된 파일들 가져오기
-      // 첨부파일이 2개 이상일 시
-      if (files.length > 2) {
-              alert("이미지는 최대 2개까지 첨부할 수 있습니다.");
-              fileInput.value = "";
-      }
-      else {
-          // FormData에 파일 추가
-          for (var i = 0; i < files.length; i++) {
-              formData.append('value', files[i]);
+          var formData = new FormData();
+          var fileInput = $('#files')[0]; // 파일 입력 필드 가져오기
+          var files = fileInput.files; // 선택된 파일들 가져오기
+          // 첨부파일 + 현재 이미지 개수가 2개 초과할 시
+          if (files.length > 2) {
+                  alert("이미지는 최대 2개까지 첨부할 수 있습니다.");
+                  fileInput.value = "";
           }
-          formData.append('key', new Blob([JSON.stringify(obj)], { type: "application/json" }));
+          else {
+              // FormData에 파일 추가
+              for (var i = 0; i < files.length; i++) {
+                  formData.append('value', files[i]);
+              }
+              formData.append('key', new Blob([JSON.stringify(obj)], { type: "application/json" }));
+              // 글 작성
+              $.ajax({
+                  　　type:'post'
+                  　  , processData: false
+                      , contentType: false
+                  　 　, data: formData
+                  　 　, url: '/api/articles'
+                  　 　, success: function(data) {
+                          location.href='/';
+                  　 　}
+                      , beforeSend : function(xhr) {
+                                  xhr.setRequestHeader(header, token);
+                      }
+                      , error:function(e) {
+                          // 제목 에러 메시지 설정
+                          var jsonResponse = JSON.parse(e.responseText);
+                          if (jsonResponse.hasOwnProperty('title')) {
+                              $("#titleError").text(jsonResponse.title);
+                          } else {
+                              $("#titleError").text('');
+                          }
 
-          $.ajax({
-              　　type:'post'
-              　  , processData: false // FormData를 사용하면 processData를 false로 설정해야 함
-                  , contentType: false // 파일 업로드 시에는 contentType을 false로 설정해야 함
-              　 　, data: formData
-              　 　, url: '/api/articles'
-              　 　, success: function(data) {
-                      location.href='/';
-              　 　}
-                  , beforeSend : function(xhr) {
-                              xhr.setRequestHeader(header, token);
-                  }
-                  , error:function(e) {
-                      // 제목 에러 메시지 설정
-                      var jsonResponse = JSON.parse(e.responseText);
-                      if (jsonResponse.hasOwnProperty('title')) {
-                          $("#titleError").text(jsonResponse.title);
-                      } else {
-                          $("#titleError").text('');
-                      }
-                      // 내용 에러 메시지 설정
-                      if (jsonResponse.hasOwnProperty('content')) {
-                          $("#contentError").text(jsonResponse.content);
-                      } else {
-                          $("#contentError").text('');
-                      }
-              　　　　
-              　　}
-          });
+                          // 내용 에러 메시지 설정
+                          if (jsonResponse.hasOwnProperty('content')) {
+                              $("#contentError").text(jsonResponse.content);
+                          } else {
+                              $("#contentError").text('');
+                          }
+                  　　}
+              });
+          }
       }
-    }
 
   </script>
 </th:block>
