--- a/src/main/resources/templates/profile_comment.html
+++ b/src/main/resources/templates/profile_comment.html
@@ -10,22 +10,27 @@
                     border-radius:10px;
                     margin-bottom:30px;">
         <div style="border:1px solid black; border-radius:10px; margin-bottom:10px;">
+            <!-- 유저 닉네임 -->
             <div>
                 <div style="padding:20px">
                     <span style="font-size:30px;" th:text="${user.usernick}"></span>
                 </div>
             </div>
+            <!-- 탭 -->
             <div style="border-top:1px solid black; border-top-width:1px; ">
                 <ul class="nav nav-tabs" style="padding:20px">
+                    <!-- 작성한 글 -->
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" th:href="@{/profilepage(userid=${user.id},type=article_list)}">작성한 글</a>
+                        <a class="nav-link" aria-current="page" th:href="@{/profile(userid=${user.id},type=article_list)}">작성한 글</a>
                     </li>
+                    <!-- 작성한 댓글 -->
                     <li class="nav-item">
-                        <a class="nav-link active" th:href="@{/profilepage(userid=${user.id},type=comment_list)}" >작성한 댓글</a>
+                        <a class="nav-link active" th:href="@{/profile(userid=${user.id},type=comment_list)}" >작성한 댓글</a>
                     </li>
                 </ul>
             </div>
         </div>
+        <!-- 테이블 -->
         <table class="table table-border table-Light">
             <COLGROUP>
                 <col style="width:40%">
@@ -41,19 +46,22 @@
             </thead>
             <tbody class="table-group-divider">
             <tr class="border-bottom" th:each="item : ${comment}">
+                <!-- 글 제목 -->
                 <td style="text-align: center;">
                     <a th:href="@{/articles/{id}(id=${item.article_id})}" th:text="${item.article_title}" />
                 </td>
+                <!-- 댓글 내용 -->
                 <td style="text-align: center;">
                     <a th:text="${item.content}" />
                 </td>
+                <!-- 작성 시간 -->
                 <td style="text-align: center;">
                     <a th:text="${item.createdDate}" />
                 </td>
             </tr>
             </tbody>
         </table>
-        <!-- 즐겨찾기 페이지 리스트 -->
+        <!-- 댓글 페이지 리스트 -->
         <div th:if="${endPage != 0}" class="paging_list">
             <ul class="pagination">
                 <li class="page-item">
