--- a/src/main/resources/templates/receive_note.html
+++ b/src/main/resources/templates/receive_note.html
@@ -14,20 +14,22 @@
            border: 1px solid #b8b8b8;
           border-radius: 3px;
         }
-
     </style>
 </head>
 <body>
 <div id="message-container">
-    <h3 style="position:relative; text-align:center; border-bottom:1px solid black">쪽지</h3>
+    <h3 style="position:relative; text-align:center; border-bottom:1px solid black">받은 쪽지</h3>
+    <!-- 받은 쪽지 form -->
     <form id="message-form">
         <div style="padding:0 35px;">
-            <label for="recipient" class="form-label">보낸 사람</label>
+            <label for="recipient" class="form-label">보낸 자</label>
+            <!-- 보낸자 email -->
             <input  th:value="${note.writer.email}" class="form-control" type="text" id="recipient" name="recipient" required readonly style="width:242px;
             border-color: #3889bf;
             border: 1px solid #b8b8b8;
              border-radius: 3px;"><br><br>
             <label for="message" class="form-label" >메시지</label><br>
+            <!-- 받은 내용 -->
             <textarea  th:text="${note.message}" class="form-control" id="message" name="message" required readonly style="width:320px; height:160px;
             border-color: #3889bf;
             border: 1px solid #b8b8b8;
@@ -37,36 +39,7 @@
     </form>
 
 </div>
-
 <script th:inline="javascript">
-    const token = $("meta[name='_csrf']").attr("content")
-    const header = $("meta[name='_csrf_header']").attr("content");
-
-
-    $('#message-form').submit(function(event) {
-    event.preventDefault();
-    const recipient = $('#recipient').value;
-    const message = $('#message').value;
-    $.ajax({
-                            　　type:'post'
-                            　　, contentType:'application/json'
-                            　　, data: JSON.stringify({
-                                    receiver_email : recipient,
-                                    message : message
-                                })
-                            　　, url: '/api/Note/save'
-                            　　, success: function(data) {
-                                   alert(data);
-                                   window.close();
-                            　　}
-                              , beforeSend : function(xhr) {
-                                                xhr.setRequestHeader(header, token);
-                               }
-                               , error:function(e) {
-                                   alert(e.responseText);
-                            　　}
-                     });
-    });
 </script>
 </body>
 </html>
